Closed Bug 669865 Opened 13 years ago Closed 6 months ago

Calling Clear() on SVG list types should set mAttrIsSet/mIsAttrSet/mIsBaseSet to false

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: jwatt, Assigned: longsonr)

Details

Attachments

(1 file)

Calling Clear() on SVG list types should set mAttrIsSet/mIsAttrSet/mIsBaseSet to false.
Severity: normal → S3
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a3a4223bd642
Calling clear() on list types should set mIsBaseSet to false so that we ignore the transform r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/42805 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: