Bug 669865 - Calling clear() on list types should set mIsBaseSet to false so that we ignore the transform r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D192063