dom/svg/SVGAnimatedTransformList.h
@@ -45,14 +45,14 @@ class SVGAnimatedTransformList {
 
  public:
   SVGAnimatedTransformList()
-      : mIsAttrSet(false), mCreatedOrRemovedOnLastChange(true) {}
+      : mIsBaseSet(false), mCreatedOrRemovedOnLastChange(true) {}
 
   SVGAnimatedTransformList& operator=(const SVGAnimatedTransformList& aOther) {
     mBaseVal = aOther.mBaseVal;
     if (aOther.mAnimVal) {
       mAnimVal = MakeUnique<SVGTransformList>(*aOther.mAnimVal);
     }
-    mIsAttrSet = aOther.mIsAttrSet;
+    mIsBaseSet = aOther.mIsBaseSet;
     mCreatedOrRemovedOnLastChange = aOther.mCreatedOrRemovedOnLastChange;
     return *this;
   }
@@ -127,7 +127,7 @@ class SVGAnimatedTransformList {
 
   SVGTransformList mBaseVal;
   UniquePtr<SVGTransformList> mAnimVal;
-  bool mIsAttrSet;
+  bool mIsBaseSet;
   // See documentation for accessor.
   bool mCreatedOrRemovedOnLastChange;
 
